2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/gettext.php: fixed the bug of pseudo-gettext with diferent
	arquitectures. Now check the arquitecture before. 
	Fixes: #2991545

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb.sql: fixed the syntax of sql for compatibility of mysql 5.0 that
	this versión is used in Debian Lenny for example. Now run in 5.0 and next
	versións.

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed negative timestamp 
	for bug: 2926876

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php
	operation/agentes/status_monitor.php: Fixed full monitor
	checks in tactical view and monitor status filter 
	on monitor detail

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_reporting.php: fixed the empty cell.
	Fixes: #2996522

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js: check if exist the "any" text translation.
	* godmode/reporting/visual_console_builder.wizard.php: add the "any"
	translation.
	Fixes: #3000496

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: check the exit library "Multibyte String".
	Fixes: #3001028

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reporting.php: Fixed unknown
	and no init monitors queries for monitor checks. 
	Bug: 3000460

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* extras/pandora_diag.php: Fixed the SQL error
	into diagnostic info section. Now the system
	check the enterprise version before to show 
	tlocal_component info. Bug: 2998918

2010-05-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php: Fixed the maps of
	type Googlemaps in agent view for bug: 2993745

2010-05-11  Ramon Novoa  <rnovoa@artica.es>

	* operation/agentes/stat_win.php: Pass the start date to min, max and
          avg functions.
